<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.maxpevnitskiy.smssender.MainActivity">


    <Button
        android:text="@string/button_stop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="stopService"
        android:id="@+id/b_stop"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/b_start" />

    <TextView
        tools:text="77"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_counter"
        app:layout_constraintLeft_toRightOf="@+id/tv_count_left"
        app:layout_constraintTop_toTopOf="@+id/tv_count_left"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:hint="@string/phone_hint"
        android:id="@+id/et_phone"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone_label" />

    <Button
        android:text="@string/button_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="startService"
        android:id="@+id/b_start"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_count"
        android:layout_marginTop="32dp"
        app:layout_constraintHorizontal_bias="0.75"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/count_hint"
        android:id="@+id/et_count"
        android:layout_below="@+id/et_phone"
        app:layout_constraintLeft_toLeftOf="@+id/tv_count_label"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_count_label" />

    <TextView
        android:text="@string/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_phone_label"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/et_phone" />

    <TextView
        android:text="@string/count_lablel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_count_label"
        app:layout_constraintLeft_toLeftOf="@+id/et_phone"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_phone" />

    <TextView
        android:text="@string/count_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_count_left"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />
</android.support.constraint.ConstraintLayout>
<!--<android.support.constraint.ConstraintLayout-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->


<!--</android.support.constraint.ConstraintLayout>-->

